--- a/style.css
+++ b/style.css
@@ -95,6 +95,75 @@ header .stylediv .cartCount span {
     margin-top: -40px;
     margin-left: 17px;
 }
+.addProdductList{
+    width:350px;
+    border-radius:10px;
+    padding:10px;
+    position:fixed;      
+    top:80px;      
+    border:1px solid #fff;
+}
+
+.cross{
+    position:absolute;
+    display:flex;
+    text-align:center;
+    align-items:center;
+    justify-content:center;
+    border-radius:50%;
+    width:23px;
+    margin-left:340px;
+    margin-top:60px;
+    height:23px;
+    z-index:100;
+    cursor: pointer;
+    background-color:red;
+    color:#fff;
+}
+
+.cartCount{
+    cursor: pointer;
+}
+
+.cartItem{
+    margin:10px 0px;
+    border:1px solid #fff;
+    padding:5px;
+    border-radius:5px;
+}
+
+.cartItem h2{
+    font-size:10px;
+    padding-bottom:5px;
+    color:yellow;
+}
+
+.cartItem p{
+    font-size:10px;
+    padding-bottom:5px;
+}
+
+.cartItem span{
+    font-weight:bold;
+    color:yellow;
+    font-size:22px;
+}
+
+.cartItem img{
+    width:80px;
+    height:80px;
+    border-radius:10px;
+}
+
+.cartItem .leftRight{
+    display:flex;
+    align-items:center;
+    gap:10px;
+    justify-content:space-around;
+}
+
+
+
 
 /* home page style */
 
